name:           distributed-process-async
version:        0.2.3
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
stability:      experimental
Copyright:      Tim Watson 2012 - 2014
Author:         Tim Watson
Maintainer:     watson.timothy@gmail.com
Stability:      experimental
Homepage:       http://github.com/haskell-distributed/distributed-process-async
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-async/issues
synopsis:       Cloud Haskell Async API
description:    This package provides a higher-level interface over Processes, in which an Async a is a
                concurrent, possibly distributed Process that will eventually deliver a value of type a.
                The package provides ways to create Async computations, wait for their results, and cancel them.
category:       Control
tested-with:    GHC == 7.4.2 GHC == 7.6.2
data-dir:       ""

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-async

flag perf
  description: Build with profiling enabled
  default: False

library
  build-depends:
                   base,
                   data-accessor >= 0.2.2.3,
                   distributed-process >= 0.5.3,
                   binary >= 0.6.3.0,
                   deepseq >= 1.3.0.1,
                   mtl,
                   containers >= 0.4,
                   hashable >= 1.2.0.5,
                   unordered-containers >= 0.2.3.0,
                   fingertree < 0.2,
                   stm >= 2.4,
                   time > 1.4,
                   transformers
  extensions:      CPP
                   InstanceSigs
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                   Control.Distributed.Process.Async
  other-modules:
                   Control.Distributed.Process.Async.Internal.Types

test-suite AsyncTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:
                   base,
                   ansi-terminal >= 0.5,
                   distributed-process >= 0.5.3,
                   distributed-process-async,
                   distributed-process-tests,
                   network >= 2.5,
                   network-transport >= 0.4,
                   network-transport-tcp >= 0.4,
                   binary >= 0.6.3.0,
                   deepseq >= 1.3.0.1,
                   HUnit >= 1.2,
                   stm >= 2.3,
                   test-framework >= 0.6,
                   test-framework-hunit,
                   rematch >= 0.2.0.0,
                   transformers
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  extensions:      CPP
  main-is:         TestAsync.hs
